--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "fakerphp/faker": "^1.20",
-        "hoa/regex": "1.17.01.13",
+        "hoa/regex": "1.17.*",
         "symfony/validator": "^4.4||^5.3"
     },
     "require-dev": {
