--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": "^7.3||^8.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "symfony/validator": "^4.4||^5.3"
+        "symfony/validator": "^4.4||^5.3||^6.0"
     },
     "require-dev": {
         "assurance-maladie/qualytou": "^2.0",
