Met à jour les versions de PHP utilisées dans les workflows
La version PHP pour l'analyse statique et les tests unitaires est maintenant définie à partir de PHP 8.1 au lieu de 8.0 et 7.3.

--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           coverage: "none"
           ini-values: date.timezone=Europe/Paris,memory_limit=-1,default_socket_timeout=10,session.gc_probability=0,apc.enable_cli=1
-          php-version: "8.0"
+          php-version: "8.1"  # Défini la version PHP 8.1 minimum
           extensions: "${{ env.extensions }}"
           tools: flex
 
