--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -17,12 +17,15 @@ jobs:
     strategy:
       matrix:
         include:
-          - php: '7.3'
+          - php: '8.1'
             mode: low-deps
-          - php: '7.3'
-          - php: '8.0'
+          - php: '8.1'
+          - php: '8.2'
             mode: low-deps
-          - php: '8.0'
+          - php: '8.2'
+          - php: '8.3'
+            mode: low-deps
+          - php: '8.3'
       fail-fast: false
 
     steps:
